# paywall

./: LICENSE  README.md
core/: CMakeLists.txt  favicon.rc  resources.qrc
core/resources/: public.pem
core/src/: fileutility.cpp  fileutility.h  jsonutility.cpp  jsonutility.h  main.cpp  mainwindow.cpp  mainwindow.h  networkmanager.cpp  networkmanager.h  rsaverifier.cpp  rsaverifier.h  storagemanager.cpp  storagemanager.h  successwidget.cpp  successwidget.h  winutility.cpp  winutility.h
core/src/ui/: mainwindow.ui  successwidget.ui
server/: .gitignore  README.md  app.py  config.json  models.py  requirements.txt  rsa_generator.py  rsa_utils.py
server/keys/: private.pem
server/templates/: key_generator.html
